This session, I simply just tested out by adding in one of my recommendations, some issues with unodered list and text overflowing out of the flexbox, will fix next session. Next session, I aim to first add in animations then fix the text issue as using <br> is temporarly fixing the issue and replacing the need for <ol> or <ul>

--- a/styles.css
+++ b/styles.css
@@ -80,9 +80,6 @@ body{
   height: 30vh;
 }
 
-
-
-
 .button{
   display:flex;
   left:10vw;
@@ -93,7 +90,14 @@ body{
   transition:all 1s;
   -webkit-transition:all 1s;
   height: 35vh;
-  width: 10vw;
+  width: 12vw;
+  overflow: hidden;
+}
+
+.button img{
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
   overflow: hidden;
 }
 
